added media queries

--- a/contact.html
+++ b/contact.html
@@ -7,19 +7,26 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/contact-header.css">
   <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/mq-header.css">
+  <link rel="stylesheet" href="css/mq-contact.css">
   <title>321 Motion</title>
 </head>
 <body>
 
-  <header>
+  <header class="sec-one">
     <div class="grid-container">
+      <p class="fa fab fas fa-bars" id="fa-bars"></p>
       <a href="index.html" class="grid-item">Home</a>
       <a href="index.html" class="grid-item logo">321 Motion</a>
       <a href="contact.html" class="grid-item">Contact</a>
     </div>
+    <div class="phone">
+      <a href="index.html">Home</a>
+      <a href="contact.html">Contact</a>
+    </div>
   </header>
 
-  <section class="sec-one">
+  <section class="sec-two">
     <p>Let's Connect</p>
   </section>
 
@@ -51,5 +58,6 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/contact.js"></script>
+  <script type="text/javascript" src="js/fa-bars.js"></script>
 </body>
 </html>
