--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
   <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/mq-header.css">
   <title>321</title>
 </head>
 <body>
 
 
   <section class="sec-one">
-    <header>
+    <header class="viewport">
       <div class="grid-container">
+        <p class="fa fab fas fa-bars" id="fa-bars"></p>
         <a href="#" class="grid-item">Home</a>
         <a href="#" class="grid-item logo">321 Motion</a>
         <a href="contact.html" class="grid-item">Contact</a>
+      </div>
+      <div class="phone">
+        <a href="#">Home</a>
+        <a href="contact.html">Contact</a>
       </div>
       <iframe id="header-vid" src="https://www.youtube.com/embed/IMF_EppQlV0?rel=0&amp;autoplay=1&controls=0&mute=1&loop=1&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=IMF_EppQlV0" frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" style="pointer-events: none;" allowfullscreen="allowfullscreen"></iframe>
@@ -232,6 +238,6 @@
   <script src="js/jquery.magnific-popup.js"></script>
   <script src="js/jquery.magnific-popup.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
-
+  <script type="text/javascript" src="js/fa-bars.js"></script>
 </body>
 </html>
