--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
   <section class="sec-two">
     <main class="container">
-      <a href="video/gershyAvtzon.mp4"
-        class="with-caption image-link" title="The caption 1">
-        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Water_Dolphin.jpg/800px-Water_Dolphin.jpg"
+      <a href="https://www.youtube.com/watch?v=JQEL-WTdgmo&feature=youtu.be"
+        class="with-caption image-link" title="SIE New Sefer - inside look">
+        <img src="images/SIE.New.Sefer.inside.look.jpg"
           />
           <div class="title-div">
-            <span class="title">Place title here </span>
+            <span class="title">SIE New Sefer - inside look</span>
           </div>
       </a>
 
@@ -235,9 +235,9 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="js/jquery.magnific-popup.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/fa-bars.js"></script>
+  <script src="js/jquery.magnific-popup.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
 </body>
 </html>
