--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <section class="sec-two">
     <main class="container">
-      <a href="https://www.youtube.com/watch?v=JQEL-WTdgmo&feature=youtu.be"
+      <a href="https://www.youtube.com/watch?v=JQEL-WTdgmo&feature=youtu.be?SameSite=None"
         class="with-caption image-link" title="SIE New Sefer - inside look">
         <img src="images/SIE.New.Sefer.inside.look.jpg"
           />
