--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
           </div>
       </a>
 
-      <a href="video/rebbe.mp4"
-        class="with-caption image-link" title="The caption 2">
+      <a href="https://www.youtube.com/watch?v=tPpztPDEMoY"
+        class="with-caption image-link" title="Gimmel Tammuz, 25 Years - Event Promo">
         <img
-          src="https://images.squarespace-cdn.com/content/v1/5403e5dbe4b04db10d1d362b/1533839825457-V1OCUOM9UJJS620O3B3B/ke17ZwdGBToddI8pDm48kOCOW4JXDTmmtq_SbvKMzyBZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZamWLI2zvYWH8K3-s_4yszcp2ryTI0HqTOaaUohrI8PIPUl9ASGRz83wwgA8JDLcjhqTtumTQ5OSpzVR3LTYTXYKMshLAGzx4R3EDFOm1kBS/glowing-mushrooms-5.jpg"
+          src="images/Gimmel.Tammuz.25.Years.Event.Promo.jpg"
           />
           <div class="title-div">
-            <span class="title">Place title here </span>
+            <span class="title">"Gimmel Tammuz, 25 Years - Event Promo</span>
           </div>
       </a>
 
