added more videos

--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 
   <section class="sec-two">
     <main class="container">
-      <a href="https://www.youtube.com/watch?v=JQEL-WTdgmo&feature=youtu.be?SameSite=None"
+      <a href="https://www.youtube.com/watch?v=JQEL-WTdgmo"
         class="with-caption image-link" title="SIE New Sefer - inside look">
-        <img src="images/SIE.New.Sefer.inside.look.jpg"
-          />
+        <img src="images/SIE.New.Sefer.inside.look.jpg"/>
           <div class="title-div">
             <span class="title">SIE New Sefer - inside look</span>
           </div>
@@ -44,29 +43,24 @@
 
       <a href="https://www.youtube.com/watch?v=tPpztPDEMoY"
         class="with-caption image-link" title="Gimmel Tammuz, 25 Years - Event Promo">
-        <img
-          src="images/Gimmel.Tammuz.25.Years.Event.Promo.jpg"
-          />
+        <img src="images/Gimmel.Tammuz.25.Years.Event.Promo.jpg"/>
           <div class="title-div">
             <span class="title">"Gimmel Tammuz, 25 Years - Event Promo</span>
           </div>
       </a>
 
-      <a href="video/rebbe.mp4" class="with-caption image-link" title="The caption 1">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKHs2o3GzRGQBtQwgI-H74vOuFMu_Gdy8j2gI2Je_JwTGYyloi&s"
-          />
+      <a href="https://www.youtube.com/watch?v=KgeIP1QDYww" class="with-caption image-link" title="Crown Heights Chaverim - Promo 2018">
+        <img src="images/Crown.Heights.Chaverim.Prom.2018.jpg" />
           <div class="title-div">
-            <span class="title">Place title here </span>
+            <span class="title">Crown Heights Chaverim - Promo 2018</span>
           </div>
       </a>
 
-      <a href="video/rebbe.mp4"
-        class="with-caption image-link" title="The caption 2">
-        <img
-          src="https://media.cntraveler.com/photos/5cb63a0bc131b962ade953ad/master/w_4000,h_2670,c_limit/Banff-Canada_GettyImages-680900749.jpg"
-          />
+      <a href="https://drive.google.com/file/d/1ovHW4Cp3ddARUWOKQSsVXipkSVm4ocGE/view"
+        class="with-caption image-link" title="Learn & Bring Moshiach promo 5779">
+        <img src="images/Learn.Bring.Moshiach.promo.5779.jpg" />
           <div class="title-div">
-            <span class="title">Place title here </span>
+            <span class="title">Learn & Bring Moshiach promo 5779 </span>
           </div>
       </a>
 
