--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,10 @@
     <div class="grid-container">
       <p class="fa fab fas fa-bars" id="fa-bars"></p>
       <a href="index.html" class="grid-item">Home</a>
-      <a href="index.html" class="grid-item logo">321 Motion</a>
+      <a href="index.html" class="grid-item logo">
+        <img src="images/logo.png" alt="logo" width="50%">
+        <!-- 321 Motion -->
+      </a>
       <a href="contact.html" class="grid-item">Contact</a>
     </div>
     <div class="phone">
