fixed youtube links

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=VS-JTloWShA&feature=youtu.be&t=60" class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=VS-JTloWShA" class="with-caption image-link">
         <img class="img-thumnail" src="images/A.Million.Dreams.Chai.Lifeline.jpg" />
         <div class="title-div">
           <span class="title">A Million Dreams - Chai Lifeline</span>
@@ -133,7 +133,7 @@
         </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=tf6GCU_kNbc&list=UUbpvtBK6ChSEu_N1cd6M30A&index=36"
+      <a href="https://www.youtube.com/watch?v=tf6GCU_kNbc"
         class="with-caption image-link">
         <img class="img-thumnail" src="images/Art.of.Friendship.PROMO.2016.jpg" />
           <div class="title-div">
@@ -200,7 +200,7 @@
         </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=Y2iiqDyKUK0&list=UUbpvtBK6ChSEu_N1cd6M30A&index=35"
+      <a href="https://www.youtube.com/watch?v=Y2iiqDyKUK0"
         class="with-caption image-link" >
         <img class="img-thumnail" src="images/ImJustLikeYou.jpg" />
         <div class="title-div">
