fix another youtube link

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <span class="title">Art of Friendship 2019</span>
         </div>
       </a>
-      <a href="https://youtu.be/ConmmmehqpE" class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=ConmmmehqpE" class="with-caption image-link">
         <img class="img-thumnail" src="images/Art.of.Friendship.PROMO.2019.jpg" />
         <div class="title-div">
           <span class="title">Art of Friendship PROMO 2019</span>
