--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <a href="#">Home</a>
         <a href="contact.html">Contact</a>
       </div>
-      <iframe id="header-vid" src="https://www.youtube.com/embed/IMF_EppQlV0?rel=0&amp;autoplay=1&controls=0&mute=1&loop=1&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=IMF_EppQlV0" frameborder="0"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" style="pointer-events: none;" allowfullscreen="allowfullscreen"></iframe>
+      <!-- <iframe id="header-vid" src="https://www.youtube.com/embed/IMF_EppQlV0?rel=0&amp;autoplay=1&controls=0&mute=1&loop=1&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=IMF_EppQlV0" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" style="pointer-events: none;" allowfullscreen="allowfullscreen"></iframe> -->
     </header>
   </section>
 
