--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     <p>Let's Connect</p>
   </section>
 
-  <form name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/myygbero"
+  <form name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/mzbbglab"
     method="post">
       <!-- <label for="full-name">Full Name</label> -->
       <input type="text" name="name" placeholder="Full name" required="">
