--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" type="image/png" href="images/321 Just Logo Outline.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" href="css/header.css">
@@ -83,7 +84,7 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=kpHE013e1zE" class="with-caption image-link" >
-        <img class="img-thumnail" src="images/Mega.Great.Purim.Party.5779.jpg" />
+        <img class="img-thumnail" src="images/Mega.Great.Purim.Party.5779.png" />
         <div class="title-div">
           <span class="title">Mega Great Purim Party 5779</span>
         </div>
