fixed title name + radius on images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/mq-header.css">
-  <title>321</title>
+  <title>321Motion</title>
 </head>
 <body>
 
