added email + youtube icons in footer

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,15 @@
   </form>
 
   <footer class="footer">
-    <a href="https://www.instagram.com/321motion/" class="fa fab fa-instagram"></a>
+    <a href="https://www.instagram.com/321motion/" class="fa fab fa-instagram">
+      <span class="footer-span-text">@321motion</span>
+    </a>
+    <a href="https://www.youtube.com/channel/UCEzf__tohW79Oitf6beX1IA" class="fa fab fa-youtube">
+      <span class="footer-span-text">321 Motion</span>
+    </a>
+    <a href="#" class="fa fas fa-envelope">
+      <span class="footer-span-text">video@321motion.com</span>
+    </a>
     <div id="ftr-txt">
       <p>Powered by love</p>
     </div>
