--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/mq-header.css">
+  <link rel="stylesheet" href="css/mq-main.css">
   <title>321Motion</title>
 </head>
 <body>
@@ -212,8 +213,17 @@
     </main>
   </section>
 
+
   <footer class="footer">
-    <a href="https://www.instagram.com/321motion/" class="fa fab fa-instagram"></a>
+    <a href="https://www.instagram.com/321motion/" class="fa fab fa-instagram">
+      <span class="footer-span-text">@321motion</span>
+    </a>
+    <a href="https://www.youtube.com/channel/UCEzf__tohW79Oitf6beX1IA" class="fa fab fa-youtube">
+      <span class="footer-span-text">321 Motion</span>
+      </a>
+    <a href="#" class="fa fas fa-envelope">
+      <span class="footer-span-text">video@321motion.com</span>
+      </a>
     <div id="ftr-txt">
       <p>Powered by love</p>
     </div>
