reduced footer size + proper fav

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" type="image/png" href="images/321 Just Logo Outline.png" />
+  <link rel="shortcut icon" type="image/png" href="images/321 Tab Icon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" href="css/header.css">
@@ -224,9 +224,9 @@
     <a href="#" class="fa fas fa-envelope">
       <span class="footer-span-text">video@321motion.com</span>
       </a>
-    <div id="ftr-txt">
+    <!-- <div id="ftr-txt">
       <p>Powered by love</p>
-    </div>
+    </div> -->
   </footer>
 
 
