added vids plus css changes

--- a/contact.html
+++ b/contact.html
@@ -54,19 +54,31 @@
   </form>
 
   <footer class="footer">
-    <a href="https://www.instagram.com/321motion/" class="fa fab fa-instagram">
+    <a href="https://www.instagram.com/321motion/" target="_blank" class="fa fab fa-instagram">
       <span class="footer-span-text">@321motion</span>
     </a>
-    <a href="https://www.youtube.com/channel/UCEzf__tohW79Oitf6beX1IA" class="fa fab fa-youtube">
+    <a href="https://www.youtube.com/channel/UCEzf__tohW79Oitf6beX1IA" target="_blank" class="fa fab fa-youtube">
       <span class="footer-span-text">321 Motion</span>
     </a>
     <a href="#" class="fa fas fa-envelope">
       <span class="footer-span-text">video@321motion.com</span>
     </a>
-    <!-- <div id="ftr-txt">
-      <p>Powered by love</p>
-    </div> -->
   </footer>
+
+  <!-- <footer class="footer">
+    <a href="https://www.instagram.com/321motion/">
+      <span class="fa fab fa-instagram"></span>
+      <span class="footer-span-text">@321motion</span>
+    </a>
+    <a href="https://www.youtube.com/channel/UCEzf__tohW79Oitf6beX1IA">
+      <span class="fa fab fa-youtube"></span>
+      <span class="footer-span-text">321 Motion</span>
+    </a>
+    <a href="#">
+      <span class="fa fas fa-envelope"></span>
+      <span class="footer-span-text">video@321motion.com</span>
+    </a>
+  </footer> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/contact.js"></script>
