--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
         </div>
       </a>
 
+      <a href="https://drive.google.com/file/d/1VJ0heZM3hzSFbvkNycGBHVtAE-jkidL9/edit" class="with-caption image-link">
+        <img class="img-thumnail" src="images/A Chassidisher Derher Fundraising Campaign.png" />
+        <div class="title-div">
+          <span class="title">A Chassidisher Derher Fundraising Campaign</span>
+        </div>
+      </a>
+
       <a href="https://www.youtube.com/watch?v=cds74X2TSCg"
         class="with-caption image-link">
         <img class="img-thumnail" src="images/Students.Whatever.It.Takes.jpg" />
@@ -194,6 +201,13 @@
         </div>
       </a>
 
+      <a href="https://www.youtube.com/watch?v=mxzvDX8Ze4k" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Coffee with Miriam.png" />
+        <div class="title-div">
+          <span class="title">Coffee with Miriam</span>
+        </div>
+      </a>
+
       <a href="https://www.youtube.com/watch?v=IXhWbwsYw2M"
         class="with-caption image-link">
         <img class="img-thumnail" src="images/Sichos.In.English.Rabbi.Avtzon.AH.jpg" />
@@ -215,18 +229,18 @@
 
 
   <footer class="footer">
-    <a href="https://www.instagram.com/321motion/" class="fa fab fa-instagram">
+    <a href="https://www.instagram.com/321motion/" target="_blank">
+      <span class="fa fab fa-instagram"></span>
       <span class="footer-span-text">@321motion</span>
     </a>
-    <a href="https://www.youtube.com/channel/UCEzf__tohW79Oitf6beX1IA" class="fa fab fa-youtube">
+    <a href="https://www.youtube.com/channel/UCEzf__tohW79Oitf6beX1IA" target="_blank">
+      <span class="fa fab fa-youtube"></span>
       <span class="footer-span-text">321 Motion</span>
       </a>
-    <a href="#" class="fa fas fa-envelope">
+    <a href="contact.html" >
+      <span class="fa fas fa-envelope"></span>
       <span class="footer-span-text">video@321motion.com</span>
-      </a>
-    <!-- <div id="ftr-txt">
-      <p>Powered by love</p>
-    </div> -->
+    </a>
   </footer>
 
 
