--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta property="og:image" content="images/321 Tab Icon.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="200">
+  <meta property="og:image:height" content="200">
   <title>321Motion</title>
 
   <link rel="shortcut icon" type="image/png" href="images/321 Tab Icon.png" />
