--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta property="og:image" content="images/321.Just.Logo.Outline.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="200">
+  <meta property="og:image:height" content="200">
+  <title>321Motion</title>
+
   <link rel="shortcut icon" type="image/png" href="images/321 Tab Icon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/contact-header.css">
   <link rel="stylesheet" href="css/contact.css">
   <link rel="stylesheet" href="css/mq-header.css">
   <link rel="stylesheet" href="css/mq-contact.css">
-  <title>321Motion</title>
+
 </head>
 <body>
 
