meta data + async

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta property="og:title" content="321Motion">
+  <meta property="og:description" content="Video editing">
   <meta property="og:image" content="images/321.Just.Logo.Outline.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="200">
   <meta property="og:image:height" content="200">
+  <meta property="og:url" content="https://321motion.com/">
+  <meta name="twitter:card" content="summary_large_image">
   <title>321Motion</title>
 
   <link rel="shortcut icon" type="image/png" href="images/321 Tab Icon.png" />
@@ -118,6 +122,20 @@
         </div>
       </a>
 
+      <a href="https://www.youtube.com/watch?v=lWcdHg0Grl8" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Tatenyu - ULY Boys Choir.png" />
+        <div class="title-div">
+          <span class="title">Tatenyu - ULY Boys Choir</span>
+        </div>
+      </a>
+
+      <a href="https://www.youtube.com/watch?v=APEO--Wk6OE" class="with-caption image-link">
+        <img class="img-thumnail" src="images/The Beinoni.jpg" />
+        <div class="title-div">
+          <span class="title">The Beinoni</span>
+        </div>
+      </a>
+
       <a href="https://www.youtube.com/watch?v=u7UV74dMpQ0"
         class="with-caption image-link">
         <img class="img-thumnail" src="images/A.Small.Piece.of.Heaven.(The.Siblings.Sing).jpg" />
@@ -130,6 +148,13 @@
         <img class="img-thumnail" src="images/A.Million.Dreams.Chai.Lifeline.jpg" />
         <div class="title-div">
           <span class="title">A Million Dreams - Chai Lifeline</span>
+        </div>
+      </a>
+
+      <a href="https://www.youtube.com/watch?v=z5W58yegQ18" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Tzomo Lecho Nafshi.jpg" />
+        <div class="title-div">
+          <span class="title">Tzomo Lecho Nafshi</span>
         </div>
       </a>
 
@@ -177,8 +202,15 @@
         </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=k5pmWiMpCsk"
+      <a href="https://vimeo.com/302159594"
         class="with-caption image-link">
+        <img class="img-thumnail" src="images/MyShliach Farbrengen 14 Kislev.png" />
+        <div class="title-div">
+          <span class="title">MyShliach Farbrengen 14 Kislev</span>
+        </div>
+      </a>
+
+      <a href="https://www.youtube.com/watch?v=k5pmWiMpCsk" class="with-caption image-link">
         <img class="img-thumnail" src="images/A.Million.Dollar.Smile.jpg" />
         <div class="title-div">
           <span class="title">A Million Dollar Smile</span>
@@ -250,9 +282,9 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javascript" src="js/fa-bars.js"></script>
-  <script src="js/jquery.magnific-popup.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script async type="text/javascript" src="js/main.js"></script>
+  <script async type="text/javascript" src="js/fa-bars.js"></script>
+  <script async src="js/jquery.magnific-popup.js"></script>
+  <script async src="js/jquery.magnific-popup.min.js"></script>
 </body>
 </html>
