--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta property="og:image" content="images/321.Just.Logo.Outline.png">
+  <meta property="og:title" content="321Motion">
+  <meta property="og:description" content="Video editing">
+  <meta property="og:image" content="images/sharbleImage.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="200">
   <meta property="og:image:height" content="200">
+  <meta property="og:url" content="https://321motion.com/">
+  <meta name="twitter:card" content="summary_large_image">
   <title>321Motion</title>
 
   <link rel="shortcut icon" type="image/png" href="images/321 Tab Icon.png" />
