--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:title" content="321Motion">
   <meta property="og:description" content="Video editing">
-  <meta property="og:image" content="images/321.Just.Logo.Outline.png">
+  <meta property="og:image" content="images/sharbleImage.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="200">
   <meta property="og:image:height" content="200">
