fixed landscap + added svg

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <p class="fa fab fas fa-bars" id="fa-bars"></p>
         <a href="#" class="grid-item">Home</a>
         <a href="#" class="grid-item logo">
-            <img src="images/logo.png" alt="logo" width="50%">
+            <!-- <img src="images/logo.png" alt="logo" width="50%"> -->
+            <img src="images/321 Motion White.svg" alt="">
           <!-- 321 Motion -->
         </a>
         <a href="contact.html" class="grid-item">Contact</a>
