--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       <p class="fa fab fas fa-bars" id="fa-bars"></p>
       <a href="index.html" class="grid-item">Home</a>
       <a href="index.html" class="grid-item logo">
-        <img src="images/logo.png" alt="logo" width="50%">
+        <img src="images/321 Motion White.svg" alt="logo">
         <!-- 321 Motion -->
       </a>
       <a href="contact.html" class="grid-item">Contact</a>
