--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <meta property="og:image:width" content="200">
   <meta property="og:image:height" content="200">
   <meta property="og:url" content="https://321motion.com/">
+  <!-- <meta property="og:type" content="article" /> -->
   <meta name="twitter:card" content="summary_large_image">
+
   <title>321Motion</title>
 
   <link rel="shortcut icon" type="image/png" href="images/321 Tab Icon.png" />
