--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
       <a href="https://www.youtube.com/watch?v=OytznKrJQA0"
         class="with-caption image-link">
-        <img class="img-thumnail" src="images/SEEDS.jpg" />
+        <img class="img-thumnail" src="images/SEEDS.png" />
         <div class="title-div">
           <span class="title">SEEDS</span>
         </div>
@@ -205,11 +205,10 @@
         </div>
       </a>
 
-      <a href="https://vimeo.com/302159594"
-        class="with-caption image-link">
-        <img class="img-thumnail" src="images/MyShliach Farbrengen 14 Kislev.png" />
+      <a href="https://youtu.be/7W8hEyAJEF4" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Chabad of Brooklyn College.png" />
         <div class="title-div">
-          <span class="title">MyShliach Farbrengen 14 Kislev</span>
+          <span class="title">Chabad of Brooklyn College</span>
         </div>
       </a>
 
@@ -217,6 +216,14 @@
         <img class="img-thumnail" src="images/A.Million.Dollar.Smile.jpg" />
         <div class="title-div">
           <span class="title">A Million Dollar Smile</span>
+        </div>
+      </a>
+
+      <a href="https://vimeo.com/302159594"
+        class="with-caption image-link">
+        <img class="img-thumnail" src="images/MyShliach Farbrengen 14 Kislev.png" />
+        <div class="title-div">
+          <span class="title">MyShliach Farbrengen 14 Kislev</span>
         </div>
       </a>
 
@@ -261,6 +268,20 @@
         <img class="img-thumnail" src="images/ImJustLikeYou.jpg" />
         <div class="title-div">
           <span class="title">#ImJustLikeYou</span>
+        </div>
+      </a>
+
+      <a href="https://youtu.be/1O7rwCnebVo" class="with-caption image-link">
+        <img class="img-thumnail" src="images/The Story of Yud Kislev.jpg" />
+        <div class="title-div">
+          <span class="title">The Story of Yud Kislev</span>
+        </div>
+      </a>
+
+      <a href="https://youtu.be/2khcZZoIPjs" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Lag Baomer Countdown.png" />
+        <div class="title-div">
+          <span class="title">Lag Baomer Countdown</span>
         </div>
       </a>
 
