fixed video linkes

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         </div>
       </a>
 
-      <a href="https://youtu.be/7W8hEyAJEF4" class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=7W8hEyAJEF4&feature=youtu.be" class="with-caption image-link">
         <img class="img-thumnail" src="images/Chabad of Brooklyn College.png" />
         <div class="title-div">
           <span class="title">Chabad of Brooklyn College</span>
@@ -271,14 +271,14 @@
         </div>
       </a>
 
-      <a href="https://youtu.be/1O7rwCnebVo" class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=1O7rwCnebVo&feature=youtu.be" class="with-caption image-link">
         <img class="img-thumnail" src="images/The Story of Yud Kislev.jpg" />
         <div class="title-div">
           <span class="title">The Story of Yud Kislev</span>
         </div>
       </a>
 
-      <a href="https://youtu.be/2khcZZoIPjs" class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=2khcZZoIPjs&feature=youtu.be" class="with-caption image-link">
         <img class="img-thumnail" src="images/Lag Baomer Countdown.png" />
         <div class="title-div">
           <span class="title">Lag Baomer Countdown</span>
