--- a/index.html
+++ b/index.html
@@ -190,6 +190,13 @@
         </div>
       </a>
 
+      <a href="https://www.youtube.com/watch?v=AaMZNCpbDO0" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Stubborn.Kids.png" />
+        <div class="title-div">
+          <span class="title">Stubborn Kids</span>
+        </div>
+      </a>
+
       <a href="https://www.youtube.com/watch?v=OytznKrJQA0"
         class="with-caption image-link">
         <img class="img-thumnail" src="images/SEEDS.png" />
