--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
   </section>
 
   <form name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/mzbbglab"
-    method="post">
+    method="post" style="max-width: 700px;">
       <!-- <label for="full-name">Full Name</label> -->
       <input type="text" name="name" placeholder="Full name" required="">
 
