--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
           </div>
       </a>
 
+      <a href="https://www.youtube.com/watch?v=hh7vlDCR8-c" class="with-caption image-link">
+        <img class="img-thumnail" src="images/OholeiTorahRenovations.png" />
+        <div class="title-div">
+          <span class="title">Promo, Fundraiser, Oholei Torah</span>
+        </div>
+      </a>
+
       <a href="https://www.youtube.com/watch?v=KgeIP1QDYww" class="with-caption image-link">
         <img class="img-thumnail" src="images/Crown.Heights.Chaverim.Prom.2018.jpg" />
           <div class="title-div">
@@ -103,10 +110,24 @@
           </div>
       </a>
 
+      <a href="https://www.youtube.com/watch?v=r7u_mPSz0ME" class="with-caption image-link">
+        <img class="img-thumnail" src="images/TzivoosHashemCkidsBrigade.png" />
+        <div class="title-div">
+          <span class="title">Tzivoos Hashem Ckids Brigade</span>
+        </div>
+      </a>
+
       <a href="https://www.youtube.com/watch?v=kpHE013e1zE" class="with-caption image-link" >
         <img class="img-thumnail" src="images/Mega.Great.Purim.Party.5779.png" />
         <div class="title-div">
           <span class="title">Mega Great Purim Party 5779</span>
+        </div>
+      </a>
+
+      <a href="https://drive.google.com/file/d/1MVCmy5gNsGfPDrGwCNox4XSmYw7ycHp_/view?usp=sharing" class="with-caption image-link">
+        <img class="img-thumnail" src="images/CharidyCmpaign-MenachemEducationFoundation.png" />
+        <div class="title-div">
+          <span class="title">Charidy Cmpaign - Menachem Education Foundation</span>
         </div>
       </a>
 
@@ -115,6 +136,13 @@
         <img class="img-thumnail" src="images/The.Great.Farby.Band.by.Chony.Milecki.Chabad.medley.jpg" />
         <div class="title-div">
           <span class="title">The Great Farby Band by Chony Milecki - Chabad medley</span>
+        </div>
+      </a>
+
+      <a href="https://www.youtube.com/watch?v=uZAqMiUJpQI" class="with-caption image-link">
+        <img class="img-thumnail" src="images/OholeiTorahChai.png" />
+        <div class="title-div">
+          <span class="title">Oholei Torah Chai</span>
         </div>
       </a>
 
@@ -223,6 +251,20 @@
         <img class="img-thumnail" src="images/A.Million.Dollar.Smile.jpg" />
         <div class="title-div">
           <span class="title">A Million Dollar Smile</span>
+        </div>
+      </a>
+
+      <a href="https://www.youtube.com/watch?v=-vRUQcb8Zwc" class="with-caption image-link">
+        <img class="img-thumnail" src="images/ACherishedConnection.png" />
+        <div class="title-div">
+          <span class="title">A Cherished Connection</span>
+        </div>
+      </a>
+
+      <a href="https://www.youtube.com/watch?v=h48xfNEycGk" class="with-caption image-link">
+        <img class="img-thumnail" src="images/YJLFeaturevideo.png" />
+        <div class="title-div">
+          <span class="title">YJL Feature video</span>
         </div>
       </a>
 
