--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
       </a>
 
-      <a href="https://drive.google.com/file/d/1MVCmy5gNsGfPDrGwCNox4XSmYw7ycHp_/view?usp=sharing" class="with-caption image-link">
+      <a href="https://drive.google.com/file/d/1MVCmy5gNsGfPDrGwCNox4XSmYw7ycHp_/preview" class="with-caption image-link">
         <img class="img-thumnail" src="images/CharidyCmpaign-MenachemEducationFoundation.png" />
         <div class="title-div">
           <span class="title">Charidy Cmpaign - Menachem Education Foundation</span>
