--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <a href="https://www.youtube.com/watch?v=hh7vlDCR8-c" class="with-caption image-link">
         <img class="img-thumnail" src="images/OholeiTorahRenovations.png" />
         <div class="title-div">
-          <span class="title">Promo, Fundraiser, Oholei Torah</span>
+          <span class="title">Oholei Torah Renovations</span>
         </div>
       </a>
 
