--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/mq-header.css">
   <link rel="stylesheet" href="css/mq-main.css">
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173552252-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-173552252-1');
+</script>
+
 </head>
 <body>
 
