--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         class="with-caption image-link">
         <img class="img-thumnail" src="images/The.Great.Farby.Band.by.Chony.Milecki.Chabad.medley.jpg" />
         <div class="title-div">
-          <span class="title">The Great Farby Band by Chony Milecki - Chabad medley</span>
+          <span class="title">The Great Farby Band - Chabad medley</span>
         </div>
       </a>
 
