--- a/index.html
+++ b/index.html
@@ -61,12 +61,20 @@
 
   <section class="sec-two">
     <main class="container">
+      <a href="https://www.youtube.com/watch?v=KVxAbqAbivE"
+        class="with-caption image-link" title="321 Motion 2020 Film Reel">
+        <img class="img-thumnail" src="images/321 Motion 2020 Film Reel.png"/>
+          <div class="title-div">
+            <span class="title">321 Motion 2020 Film Reel</span>
+         </div>
+      </a>
+
       <a href="https://www.youtube.com/watch?v=JQEL-WTdgmo"
         class="with-caption image-link" title="SIE New Sefer - inside look">
         <img class="img-thumnail" src="images/SIE.New.Sefer.inside.look.jpg"/>
           <div class="title-div">
             <span class="title">SIE New Sefer - inside look</span>
-          </div>
+        </div>
       </a>
 
       <a href="https://www.youtube.com/watch?v=tPpztPDEMoY"
