--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <main class="container">
       <a href="https://www.youtube.com/watch?v=KVxAbqAbivE"
         class="with-caption image-link" title="321 Motion 2020 Film Reel">
-        <img class="img-thumnail" src="images/321 Motion 2020 Film Reel.png"/>
+        <img class="img-thumnail" src="images/321 Motion 2020 Film Reel HD.png"/>
           <div class="title-div">
             <span class="title">321 Motion 2020 Film Reel</span>
          </div>
