--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <a href="https://www.youtube.com/watch?v=r7u_mPSz0ME" class="with-caption image-link">
         <img class="img-thumnail" src="images/TzivoosHashemCkidsBrigade.png" />
         <div class="title-div">
-          <span class="title">Tzivoos Hashem Ckids Brigade</span>
+          <span class="title">Tzivos Hashem Ckids Brigade</span>
         </div>
       </a>
 
