--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,8 @@
 
   <link rel="shortcut icon" type="image/png" href="images/321 Tab Icon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/contact-header.css">
+  <!--<link rel="stylesheet" href="css/contact-header.css"> -->
+  <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/contact.css">
   <link rel="stylesheet" href="css/mq-header.css">
   <link rel="stylesheet" href="css/mq-contact.css">
@@ -24,7 +25,7 @@
 </head>
 <body>
 
-  <header class="sec-one">
+  <!--<header class="sec-one">
     <div class="grid-container">
       <p class="fa fab fas fa-bars" id="fa-bars"></p>
       <a href="index.html" class="grid-item">Home</a>
@@ -38,7 +39,26 @@
       <a href="index.html">Home</a>
       <a href="contact.html">Contact</a>
     </div>
-  </header>
+  </header>-->
+
+   <section class="sec-one">
+    <header class="viewport">
+      <div class="grid-container">
+        <p class="fa fab fas fa-bars" id="fa-bars"></p>
+        <a href="#" class="grid-item">Home</a>
+        <a href="#" class="grid-item logo">
+            <!-- <img src="images/logo.png" alt="logo" width="50%"> -->
+            <img src="images/321 Motion White.svg" alt="">
+          <!-- 321 Motion -->
+        </a>
+        <a href="contact.html" class="grid-item">Contact</a>
+      </div>
+      <div class="phone">
+        <a href="#">Home</a>
+        <a href="contact.html">Contact</a>
+      </div>
+    </header>
+  </section>
 
   <section class="sec-two">
     <p>Let's Connect</p>
