--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
     <header class="viewport">
       <div class="grid-container">
         <p class="fa fab fas fa-bars" id="fa-bars"></p>
-        <a href="#" class="grid-item">Home</a>
-        <a href="#" class="grid-item logo">
+        <a href="index.html" class="grid-item">Home</a>
+        <a href="index.html" class="grid-item logo">
             <!-- <img src="images/logo.png" alt="logo" width="50%"> -->
             <img src="images/321 Motion White.svg" alt="">
           <!-- 321 Motion -->
