--- a/live.html
+++ b/live.html
@@ -15,7 +15,7 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <title>321Motion | Live </title>
-  <meta http-equiv="refresh" content="0; URL=https://www.youtube.com/channel/UCEzf__tohW79Oitf6beX1IA">
+  <meta http-equiv="refresh" content="0; URL=https://www.youtube.com/321Motion">
   <link rel="canonical" href="https://321motion.com/">
 
   
