--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
       <span class="fa fab fa-instagram"></span>
       <span class="footer-span-text">@321motion</span>
     </a>
-    <a href="https://www.youtube.com/channel/UCEzf__tohW79Oitf6beX1IA" target="_blank">
+    <a href="https://www.youtube.com/321Motion" target="_blank">
       <span class="fa fab fa-youtube"></span>
       <span class="footer-span-text">321 Motion</span>
       </a>
