--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
       <span class="fa fab fa-instagram"></span>
       <span class="footer-span-text">@321motion</span>
     </a>
-    <a href="https://www.youtube.com/channel/UCEzf__tohW79Oitf6beX1IA">
+    <a href="https://www.youtube.com/321Motion">
       <span class="fa fab fa-youtube"></span>
       <span class="footer-span-text">321 Motion</span>
     </a>
