--- a/live.html
+++ b/live.html
@@ -17,6 +17,8 @@
   <title>321Motion | Live </title>
   <meta http-equiv="refresh" content="0; URL=https://www.youtube.com/321Motion">
   <link rel="canonical" href="https://321motion.com/">
+  <!-- youtube URL youtube.com/embed/ABCD -->
+  <!-- vimeo URL player.vimeo.com/video/#### -->
 
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
