--- a/live.html
+++ b/live.html
@@ -15,7 +15,7 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <title>321Motion | Live </title>
-  <meta http-equiv="refresh" content="0; URL=https://www.youtube.com/321Motion">
+  <meta http-equiv="refresh" content="0; URL=https://vimeo.com/event/230477">
   <link rel="canonical" href="https://321motion.com/">
   <!-- youtube URL youtube.com/embed/ABCD -->
   <!-- vimeo URL player.vimeo.com/video/#### -->
