--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
         </div>
       </a>
 
+      <a href="https://www.youtube.com/watch?v=6pVGvStAOCs" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Ckids Camp Promo 2020.png" />
+        <div class="title-div">
+          <span class="title">CKids Camp Promo 2020</span>
+        </div>
+      </a>      
+      
       <a href="https://www.youtube.com/watch?v=kpHE013e1zE" class="with-caption image-link" >
         <img class="img-thumnail" src="images/Mega.Great.Purim.Party.5779.png" />
         <div class="title-div">
