--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
         </div>
       </a>
 
+       <a href="https://vimeo.com/451945828" class="with-caption image-link" title="Hat Measuring">
+        <img class="img-thumnail" src="images/Hat Measuring.png"/>
+          <div class="title-div">
+            <span class="title">Hat Measuring</span>
+        </div>
+      </a>
+      
       <a href="https://www.youtube.com/watch?v=tPpztPDEMoY"
         class="with-caption image-link" >
         <img class="img-thumnail" src="images/Gimmel.Tammuz.25.Years.Event.Promo.jpg"/>
@@ -99,8 +106,7 @@
           </div>
       </a>
 
-      <a href="https://drive.google.com/file/d/1ovHW4Cp3ddARUWOKQSsVXipkSVm4ocGE/preview"
-        class="with-caption image-link" >
+      <a href="https://drive.google.com/file/d/1ovHW4Cp3ddARUWOKQSsVXipkSVm4ocGE/preview" class="with-caption image-link" >
         <img class="img-thumnail" src="images/Learn.Bring.Moshiach.promo.5779.jpg" />
           <div class="title-div">
             <span class="title">Learn & Bring Moshiach promo 5779 </span>
@@ -121,8 +127,7 @@
         </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=cds74X2TSCg"
-        class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=cds74X2TSCg" class="with-caption image-link">
         <img class="img-thumnail" src="images/Students.Whatever.It.Takes.jpg" />
           <div class="title-div">
             <span class="title">Students - Whatever It Takes</span>
@@ -157,8 +162,7 @@
         </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=Q55f5hwejLI"
-        class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=Q55f5hwejLI" class="with-caption image-link">
         <img class="img-thumnail" src="images/The.Great.Farby.Band.by.Chony.Milecki.Chabad.medley.jpg" />
         <div class="title-div">
           <span class="title">The Great Farby Band - Chabad medley</span>
