--- a/live.html
+++ b/live.html
@@ -15,10 +15,12 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <title>321Motion | Live </title>
-  <meta http-equiv="refresh" content="0; URL=https://321motion.com">
+  <!-- Edit URL on next line -->
+  <meta http-equiv="refresh" content="0; URL=https://vimeo.com/event/288985/embed">
   <link rel="canonical" href="https://321motion.com/">
   <!-- youtube URL youtube.com/embed/ABCD -->
   <!-- vimeo URL player.vimeo.com/video/#### -->
+  <!-- vimeo URL vimeo.com/event/####/embed -->
   <!-- Web URL https://321motion.com -->
 
   
