--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
         </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=OytznKrJQA0"
-        class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=OytznKrJQA0" class="with-caption image-link">
         <img class="img-thumnail" src="images/SEEDS.png" />
         <div class="title-div">
           <span class="title">SEEDS</span>
@@ -267,6 +266,13 @@
         <img class="img-thumnail" src="images/Ahavas.Yisroel.Rabbi.Avtzon.AH.jpg" />
         <div class="title-div">
           <span class="title">Ahavas Yisroel - Rabbi Avtzon A"H</span>
+        </div>
+      </a>
+      
+      <a href="https://www.youtube.com/watch?v=xgGlyjjC_8o" class="with-caption image-link">
+        <img class="img-thumnail" src="images/A Bubby's Friendship Circle Experience.jpg" />
+        <div class="title-div">
+          <span class="title">A Bubby's Friendship Circle Experience</span>
         </div>
       </a>
 
