--- a/index.html
+++ b/index.html
@@ -61,16 +61,14 @@
 
   <section class="sec-two">
     <main class="container">
-      <a href="https://www.youtube.com/watch?v=KVxAbqAbivE"
-        class="with-caption image-link" title="321 Motion 2020 Film Reel">
+      <a href="https://www.youtube.com/watch?v=KVxAbqAbivE" class="with-caption image-link" title="321 Motion 2020 Film Reel">
         <img class="img-thumnail" src="images/321 Motion 2020 Film Reel HD.png"/>
           <div class="title-div">
             <span class="title">321 Motion 2020 Film Reel</span>
          </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=JQEL-WTdgmo"
-        class="with-caption image-link" title="SIE New Sefer - inside look">
+      <a href="https://www.youtube.com/watch?v=JQEL-WTdgmo" class="with-caption image-link" title="SIE New Sefer - inside look">
         <img class="img-thumnail" src="images/SIE.New.Sefer.inside.look.jpg"/>
           <div class="title-div">
             <span class="title">SIE New Sefer - inside look</span>
@@ -84,8 +82,7 @@
         </div>
       </a>
       
-      <a href="https://www.youtube.com/watch?v=tPpztPDEMoY"
-        class="with-caption image-link" >
+      <a href="https://www.youtube.com/watch?v=tPpztPDEMoY" class="with-caption image-link" >
         <img class="img-thumnail" src="images/Gimmel.Tammuz.25.Years.Event.Promo.jpg"/>
           <div class="title-div">
             <span class="title">Gimmel Tammuz, 25 Years - Event Promo</span>
@@ -197,8 +194,7 @@
         </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=u7UV74dMpQ0"
-        class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=u7UV74dMpQ0" class="with-caption image-link">
         <img class="img-thumnail" src="images/A.Small.Piece.of.Heaven.(The.Siblings.Sing).jpg" />
           <div class="title-div">
             <span class="title">A Small Piece of Heaven (The Siblings Sing)</span>
@@ -219,8 +215,7 @@
         </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=Po1oGEkGzkI"
-        class="with-caption image-link" >
+      <a href="https://www.youtube.com/watch?v=Po1oGEkGzkI" class="with-caption image-link" >
         <img class="img-thumnail" src="images/Art.of.Friendship.2019.jpg" />
         <div class="title-div">
           <span class="title">Art of Friendship 2019</span>
@@ -233,8 +228,7 @@
         </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=tf6GCU_kNbc"
-        class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=tf6GCU_kNbc" class="with-caption image-link">
         <img class="img-thumnail" src="images/Art.of.Friendship.PROMO.2016.jpg" />
           <div class="title-div">
             <span class="title">Art of Friendship PROMO 2016</span>
@@ -304,8 +298,7 @@
         </div>
       </a>
 
-      <a href="https://vimeo.com/302159594"
-        class="with-caption image-link">
+      <a href="https://vimeo.com/302159594" class="with-caption image-link">
         <img class="img-thumnail" src="images/MyShliach Farbrengen 14 Kislev.png" />
         <div class="title-div">
           <span class="title">MyShliach Farbrengen 14 Kislev</span>
@@ -340,16 +333,14 @@
         </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=IXhWbwsYw2M"
-        class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=IXhWbwsYw2M" class="with-caption image-link">
         <img class="img-thumnail" src="images/Sichos.In.English.Rabbi.Avtzon.AH.jpg" />
         <div class="title-div">
           <span class="title">Sichos In English - Rabbi Avtzon A"H</span>
         </div>
       </a>
 
-      <a href="https://www.youtube.com/watch?v=Y2iiqDyKUK0"
-        class="with-caption image-link" >
+      <a href="https://www.youtube.com/watch?v=Y2iiqDyKUK0" class="with-caption image-link" >
         <img class="img-thumnail" src="images/ImJustLikeYou.jpg" />
         <div class="title-div">
           <span class="title">#ImJustLikeYou</span>
