--- a/live.html
+++ b/live.html
@@ -16,7 +16,7 @@
 
   <title>321Motion | Live </title>
   <!-- Edit URL on next line -->
-  <meta http-equiv="refresh" content="0; URL=https://player.vimeo.com/video/456758585">
+  <meta http-equiv="refresh" content="0; URL=https://vimeo.com/event/288985/embed">
   <link rel="canonical" href="https://321motion.com/">
   <!-- youtube URL youtube.com/embed/ABCD -->
   <!-- vimeo URL player.vimeo.com/video/#### -->
