--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=Y2iiqDyKUK0" class="with-caption image-link" >
-        <img class="img-thumnail" src="images/ImJustLikeYou.jpg" />
+        <img class="img-thumnail" src="images/Small/ImJustLikeYou LQ.jpg" />
         <div class="title-div">
           <span class="title">#ImJustLikeYou</span>
         </div>
