--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </a>
 
       <a href="https://drive.google.com/file/d/1VJ0heZM3hzSFbvkNycGBHVtAE-jkidL9/preview" class="with-caption image-link">
-        <img class="img-thumnail" src="images/A Chassidisher Derher Fundraising Campaign.png" />
+        <img class="img-thumnail" src="images/A Chassidisher Derher Fundraising Campaign.jpg" />
         <div class="title-div">
           <span class="title">A Chassidisher Derher Fundraising Campaign</span>
         </div>
@@ -153,9 +153,9 @@
       </a>
 
       <a href="https://drive.google.com/file/d/1MVCmy5gNsGfPDrGwCNox4XSmYw7ycHp_/preview" class="with-caption image-link">
-        <img class="img-thumnail" src="images/CharidyCmpaign-MenachemEducationFoundation.png" />
+        <img class="img-thumnail" src="images/Charidy Campaign - Menachem Education Foundation.jpg" />
         <div class="title-div">
-          <span class="title">Charidy Cmpaign - Menachem Education Foundation</span>
+          <span class="title">Charidy Campaign - Menachem Education Foundation</span>
         </div>
       </a>
 
@@ -271,7 +271,7 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=7W8hEyAJEF4" class="with-caption image-link">
-        <img class="img-thumnail" src="images/Chabad of Brooklyn College.png" />
+        <img class="img-thumnail" src="images/Chabad of Brooklyn College.jpg" />
         <div class="title-div">
           <span class="title">Chabad of Brooklyn College</span>
         </div>
@@ -285,7 +285,7 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=-vRUQcb8Zwc" class="with-caption image-link">
-        <img class="img-thumnail" src="images/ACherishedConnection.png" />
+        <img class="img-thumnail" src="images/A Cherished Connection.jpg" />
         <div class="title-div">
           <span class="title">A Cherished Connection</span>
         </div>
