--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=hh7vlDCR8-c" class="with-caption image-link">
-        <img class="img-thumnail" src="images/OholeiTorahRenovations.png" />
+        <img class="img-thumnail" src="images/Oholei Torah Renovations.jpg" />
         <div class="title-div">
           <span class="title">Oholei Torah Renovations</span>
         </div>
@@ -104,7 +104,7 @@
       </a>
 
       <a href="https://drive.google.com/file/d/1ovHW4Cp3ddARUWOKQSsVXipkSVm4ocGE/preview" class="with-caption image-link" >
-        <img class="img-thumnail" src="images/Learn.Bring.Moshiach.promo.5779.jpg" />
+        <img class="img-thumnail" src="images/Learn & Bring Moshiach promo 5779.jpg" />
           <div class="title-div">
             <span class="title">Learn & Bring Moshiach promo 5779 </span>
           </div>
@@ -132,21 +132,21 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=r7u_mPSz0ME" class="with-caption image-link">
-        <img class="img-thumnail" src="images/TzivoosHashemCkidsBrigade.png" />
+        <img class="img-thumnail" src="images/Tzivos Hashem Ckids Brigade.jpg" />
         <div class="title-div">
           <span class="title">Tzivos Hashem Ckids Brigade</span>
         </div>
       </a>
 
       <a href="https://www.youtube.com/watch?v=6pVGvStAOCs" class="with-caption image-link">
-        <img class="img-thumnail" src="images/Ckids Camp Promo 2020.png" />
+        <img class="img-thumnail" src="images/Ckids Camp Promo 2020.jpg" />
         <div class="title-div">
           <span class="title">CKids Camp Promo 2020</span>
         </div>
       </a>      
       
       <a href="https://www.youtube.com/watch?v=kpHE013e1zE" class="with-caption image-link" >
-        <img class="img-thumnail" src="images/Mega.Great.Purim.Party.5779.png" />
+        <img class="img-thumnail" src="images/Mega Great Purim Party 5779.jpg" />
         <div class="title-div">
           <span class="title">Mega Great Purim Party 5779</span>
         </div>
@@ -181,7 +181,7 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=lWcdHg0Grl8" class="with-caption image-link">
-        <img class="img-thumnail" src="images/Tatenyu - ULY Boys Choir.png" />
+        <img class="img-thumnail" src="images/Tatenyu - ULY Boys Choir.jpg" />
         <div class="title-div">
           <span class="title">Tatenyu - ULY Boys Choir</span>
         </div>
@@ -292,14 +292,14 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=h48xfNEycGk" class="with-caption image-link">
-        <img class="img-thumnail" src="images/YJLFeaturevideo.png" />
+        <img class="img-thumnail" src="images/YJL Feature video.jpg" />
         <div class="title-div">
           <span class="title">YJL Feature video</span>
         </div>
       </a>
 
       <a href="https://vimeo.com/302159594" class="with-caption image-link">
-        <img class="img-thumnail" src="images/MyShliach Farbrengen 14 Kislev.png" />
+        <img class="img-thumnail" src="images/MyShliach Farbrengen 14 Kislev.jpg" />
         <div class="title-div">
           <span class="title">MyShliach Farbrengen 14 Kislev</span>
         </div>
@@ -327,7 +327,7 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=mxzvDX8Ze4k" class="with-caption image-link">
-        <img class="img-thumnail" src="images/Coffee with Miriam.png" />
+        <img class="img-thumnail" src="images/Coffee with Miriam.jpg" />
         <div class="title-div">
           <span class="title">Coffee with Miriam</span>
         </div>
@@ -355,7 +355,7 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=2khcZZoIPjs" class="with-caption image-link">
-        <img class="img-thumnail" src="images/Lag Baomer Countdown.png" />
+        <img class="img-thumnail" src="images/Lag Baomer Countdown.jpg" />
         <div class="title-div">
           <span class="title">Lag Baomer Countdown</span>
         </div>
