--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <section class="sec-two">
     <main class="container">
       <a href="https://www.youtube.com/watch?v=KVxAbqAbivE" class="with-caption image-link" title="321 Motion 2020 Film Reel">
-        <img class="img-thumnail" src="images/321 Motion 2020 Film Reel HD.png"/>
+        <img class="img-thumnail" src="images/321 Motion 2020 Film Reel HD.jpg"/>
           <div class="title-div">
             <span class="title">321 Motion 2020 Film Reel</span>
          </div>
@@ -76,7 +76,7 @@
       </a>
 
        <a href="https://vimeo.com/451945828" class="with-caption image-link" title="Hat Measuring">
-        <img class="img-thumnail" src="images/Hat Measuring.png"/>
+        <img class="img-thumnail" src="images/Hat Measuring.jpg"/>
           <div class="title-div">
             <span class="title">Hat Measuring</span>
         </div>
@@ -167,7 +167,7 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=uZAqMiUJpQI" class="with-caption image-link">
-        <img class="img-thumnail" src="images/OholeiTorahChai.png" />
+        <img class="img-thumnail" src="images/Oholei Torah Chai.jpg" />
         <div class="title-div">
           <span class="title">Oholei Torah Chai</span>
         </div>
@@ -243,14 +243,14 @@
       </a>
 
       <a href="https://www.youtube.com/watch?v=AaMZNCpbDO0" class="with-caption image-link">
-        <img class="img-thumnail" src="images/Stubborn.Kids.png" />
+        <img class="img-thumnail" src="images/Stubborn Kids.jpg" />
         <div class="title-div">
           <span class="title">Stubborn Kids</span>
         </div>
       </a>
 
       <a href="https://www.youtube.com/watch?v=OytznKrJQA0" class="with-caption image-link">
-        <img class="img-thumnail" src="images/SEEDS.png" />
+        <img class="img-thumnail" src="images/SEEDS.jpg" />
         <div class="title-div">
           <span class="title">SEEDS</span>
         </div>
