--- a/index.html
+++ b/index.html
@@ -269,6 +269,13 @@
           <span class="title">A Bubby's Friendship Circle Experience</span>
         </div>
       </a>
+      
+      <a href="https://www.youtube.com/watch?v=jA0kTuAD0QQ" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Huda's Friendship Circle Experience.jpg" />
+        <div class="title-div">
+          <span class="title">Huda's Friendship Circle Experience</span>
+        </div>
+      </a>
 
       <a href="https://www.youtube.com/watch?v=7W8hEyAJEF4" class="with-caption image-link">
         <img class="img-thumnail" src="images/Chabad of Brooklyn College.jpg" />
