--- a/index.html
+++ b/index.html
@@ -214,6 +214,13 @@
           <span class="title">Tzomo Lecho Nafshi</span>
         </div>
       </a>
+      
+      <a href="https://vimeo.com/261015763" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Chidon 5778.jpg" />
+        <div class="title-div">
+          <span class="title">Chidon Event 5778</span>
+        </div>
+      </a>
 
       <a href="https://www.youtube.com/watch?v=Po1oGEkGzkI" class="with-caption image-link" >
         <img class="img-thumnail" src="images/Art.of.Friendship.2019.jpg" />
